--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="https://github.com/azlansu">Azlan Abu Hassan (Computing)</a></li>
       <li><a href="https://github.com/yueji1984">Ng Yu Jie 5C34 (Computing)</a></li>
       <li><a href="https://github.com/JokerDot">Shen Hanzhang 3J (Infocomm Club)</a></li>
+      <li><a href="https://github.com/FailureNoob">Chloe Te 1A (Computing)</a></li>
     </ol>
   </body>
 </html>
